# message-queue

./: .gitmodules  CMakeLists.txt  README.md  index.h  log.c  msgq.c  msgq.h  msgq_private.h  mx_msgq.c  mx_msgq.prx  shm.c  shm.h  shm_private.h  stdatomic.h  threads.c
spin/: mx_msgq.c  mx_msgq.prx
test/: test.c
